QA testing/fix layout on smaller screen

--- a/src/components/BillImpact/assets/BillImpact.css
+++ b/src/components/BillImpact/assets/BillImpact.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: fit-content;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
