--- a/src/components/RateDisplay/assets/RateDisplay.css
+++ b/src/components/RateDisplay/assets/RateDisplay.css
@@ -7,6 +7,6 @@
   box-shadow: lightgrey 0.15em 0.15em;
   text-align: center;
   border-radius: .3rem;
-  height: 100%;
+  height: fit-content;
   width: 20rem;
 }
