--- a/src/pages/Landing/assets/Landing.css
+++ b/src/pages/Landing/assets/Landing.css
@@ -3,4 +3,5 @@
   height: 100%;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
